--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "test": "jest",
     "lint": "tslint --project .",
     "precommit": "npm run lint & npm run test",
+    "prepublish": "npm run build",
     "build": "tsc --project tsconfig.json --verbose"
   },
   "jest": {
