--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "lint": "tslint --project .",
     "precommit": "npm run lint & npm run test",
     "prepublish": "npm run build",
-    "build": "tsc --project tsconfig.json --verbose"
+    "build": "tsc"
   },
   "jest": {
     "moduleFileExtensions": [
