--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "scripts": {
     "test": "jest",
+    "watch": "jest --watch",
     "lint": "tslint --project .",
     "precommit": "npm run lint & npm run test",
     "prepublish": "npm run build",
