--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,13 @@
     "forceConsistentCasingInFileNames": true,
     "inlineSourceMap": true,
     "inlineSources": true,
+    "lib": [
+      "es2015",
+      "es2016",
+      "es2017"
+    ],
     "module": "commonjs",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitReturns": true,
     "noUnusedParameters": true,
     "outDir": "./dist",
