--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "mobx": "^3.4.1"
   },
   "scripts": {
-    "test": "jest",
-    "watch": "jest --watch",
+    "test": "jest --coverage",
+    "watch": "jest --watch --coverage",
     "lint": "tslint --project .",
     "precommit": "npm run lint & npm run test",
     "prepublish": "npm run build",
