--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,7 @@
 {
-  "compilerOptions": {
-    "allowJs": false,
-    "allowUnreachableCode": false,
-    "allowUnusedLabels": false,
-    "alwaysStrict": true,
-    "declaration": true,
-    "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": true,
-    "inlineSourceMap": true,
-    "inlineSources": true,
-    "lib": [
-      "es2015",
-      "es2016",
-      "es2017"
-    ],
-    "module": "commonjs",
-    "noImplicitAny": false,
-    "noImplicitReturns": true,
-    "noUnusedParameters": true,
-    "outDir": "./dist",
-    "strict": true,
-    "strictFunctionTypes": true,
-    "target": "es5"
-  },
-  "exclude": [
-    "node_modules",
-    "examples"
-  ],
+  "extends": "./tsconfig.build.json",
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "test/**/*"
   ],
 }
