Add a basic mixin

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     ],
     "testRegex": "test/(.*).ts",
     "transform": {
-      ".ts": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      ".ts": "ts-jest"
     }
   }
 }
