--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "husky": "^0.14.3",
     "jest": "^22.0.4",
     "mobx": "^3.4.1",
+    "mobx-collection-store": "^2.0.0",
     "ts-jest": "^22.0.0",
     "tslint": "^5.8.0",
     "typescript": "^2.6.2"
@@ -31,6 +32,8 @@
   "scripts": {
     "test": "jest --coverage",
     "watch": "jest --watch --coverage",
+    "benchmark": "jest benchmark",
+    "benchmark-watch": "jest benchmark --watch",
     "lint": "tslint --project .",
     "precommit": "npm run lint & npm run test",
     "prepublish": "npm run build",
