--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "build": "tsc --project tsconfig.build.json"
   },
   "jest": {
+    "mapCoverage": true,
     "moduleFileExtensions": [
       "ts",
       "js"
