--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
-	"devDependencies": {
-		"lerna": "^2.5.1"
-	}
+  "devDependencies": {
+    "lerna": "^2.5.1"
+  },
+  "scripts": {
+    "precommit": "lerna run lint & lerna run test"
+  },
+  "dependencies": {
+    "husky": "^0.14.3"
+  }
 }
