--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
+  "name": "datx",
   "devDependencies": {
+    "husky": "^0.14.3",
     "lerna": "^2.5.1"
   },
   "scripts": {
     "precommit": "lerna run lint & lerna run test"
   },
   "dependencies": {
-    "husky": "^0.14.3"
   }
 }
