--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -24,6 +24,7 @@
     "@infinumjs/tslint-config": "^1.1.1",
     "@types/jest": "^22.0.1",
     "@types/node": "^8.5.5",
+    "isomorphic-fetch": "^2.2.1",
     "jest": "^22.0.4",
     "mobx": "^3.4.1",
     "ts-jest": "^22.0.0",
@@ -50,5 +51,6 @@
     "transform": {
       ".ts": "ts-jest"
     }
-  }
+  },
+  "dependencies": {}
 }
