--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "datx",
   "devDependencies": {
     "husky": "^0.14.3",
-    "lerna": "^2.5.1"
+    "lerna": "^2.8.0",
+    "typescript": "^2.7.1"
   },
   "scripts": {
     "precommit": "lerna run lint & lerna run test"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
