--- a/packages/datx-utils/package.json
+++ b/packages/datx-utils/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "datx",
-  "version": "0.6.0",
-  "description": "A MobX data store",
+  "name": "datx-utils",
+  "version": "0.5.0",
+  "description": "DatX lib utils for mixins",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "sideEffects": false,
@@ -15,13 +15,16 @@
   "homepage": "https://github.com/infinum/datx#readme",
   "author": "Infinum JavaScript Team <hello@infinum.co>",
   "license": "MIT",
+  "keywords": [
+    "datx",
+    "mobx"
+  ],
   "devDependencies": {
     "@infinumjs/tslint-config": "^1.1.1",
     "@types/jest": "^22.1.1",
     "@types/node": "^9.4.0",
     "jest": "^22.1.4",
     "mobx": "^3.4.1",
-    "mobx-collection-store": "^2.0.0",
     "ts-jest": "^22.0.3",
     "tslint": "^5.9.1",
     "typescript": "^2.7.1"
@@ -32,8 +35,6 @@
   "scripts": {
     "test": "jest --coverage",
     "watch": "jest --watch --coverage",
-    "benchmark": "jest benchmark",
-    "benchmark-watch": "jest benchmark --watch",
     "lint": "tslint --project .",
     "prepublish": "npm run build",
     "build": "tsc --project tsconfig.build.json"
@@ -48,8 +49,5 @@
     "transform": {
       ".ts": "ts-jest"
     }
-  },
-  "dependencies": {
-    "datx-utils": "^0.5.0"
   }
 }
