--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -39,7 +39,7 @@
     "build": "tsc --project tsconfig.build.json"
   },
   "jest": {
-    "mapCoverage": true,
+    "mapCoverage": false,
     "moduleFileExtensions": [
       "ts",
       "js"
