jsonapi tests WIP

--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -42,12 +42,12 @@
     "build": "tsc --project tsconfig.build.json"
   },
   "jest": {
-    "mapCoverage": true,
+    "mapCoverage": false,
     "moduleFileExtensions": [
       "ts",
       "js"
     ],
-    "testRegex": "test/(.*).ts",
+    "testRegex": "test/main.ts",
     "transform": {
       ".ts": "ts-jest"
     }
