--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -27,12 +27,13 @@
     "isomorphic-fetch": "^2.2.1",
     "jest": "^22.2.2",
     "mobx": "^3.5.1",
+    "nock": "^9.1.6",
     "ts-jest": "^22.0.3",
     "tslint": "^5.9.1",
     "typescript": "^2.7.1"
   },
   "peerDependencies": {
-    "mobx": "^3.4.1"
+    "mobx": "^3.5.1"
   },
   "scripts": {
     "test": "jest --coverage",
