Add relationship save support, bugfixes

--- a/packages/datx-utils/package.json
+++ b/packages/datx-utils/package.json
@@ -40,6 +40,7 @@
     "build": "tsc --project tsconfig.build.json"
   },
   "jest": {
+    "coveragePathIgnorePatterns": ["/test/", "/node_modules/"],
     "mapCoverage": true,
     "moduleFileExtensions": [
       "ts",
