--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -39,6 +39,7 @@
     "build": "tsc --project tsconfig.build.json"
   },
   "jest": {
+    "coveragePathIgnorePatterns": ["/test/", "/node_modules/"],
     "mapCoverage": false,
     "moduleFileExtensions": [
       "ts",
