--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -43,6 +43,7 @@
     "build": "tsc --project tsconfig.build.json"
   },
   "jest": {
+    "coveragePathIgnorePatterns": ["/test/", "/node_modules/"],
     "mapCoverage": false,
     "moduleFileExtensions": [
       "ts",
