Fix linking issue, add yarn workspaces

--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   "scripts": {
     "precommit": "lerna run lint & lerna run test"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ]
 }
