--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -43,8 +43,13 @@
     "build": "tsc --project tsconfig.build.json"
   },
   "jest": {
-    "coveragePathIgnorePatterns": ["/test/", "/node_modules/"],
-    "mapCoverage": false,
+    "coveragePathIgnorePatterns": [
+      "/test/",
+      "/node_modules/",
+      "../datx/dist",
+      "../datx-utils/dist"
+    ],
+    "mapCoverage": true,
     "moduleFileExtensions": [
       "ts",
       "js"
