--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -28,6 +28,9 @@
     "jest": "^22.2.2",
     "mobx": "^3.5.1",
     "nock": "^9.1.6",
+    "rollup": "^0.56.2",
+    "rollup-plugin-typescript2": "^0.11.1",
+    "rollup-plugin-uglify": "^3.0.0",
     "ts-jest": "^22.0.3",
     "tslint": "^5.9.1",
     "typescript": "^2.7.1"
@@ -40,7 +43,7 @@
     "watch": "jest --watch --coverage",
     "lint": "tslint --project .",
     "prepublish": "npm run build",
-    "build": "tsc --project tsconfig.build.json"
+    "build": "rollup -c"
   },
   "jest": {
     "coveragePathIgnorePatterns": [
