--- a/packages/datx-utils/package.json
+++ b/packages/datx-utils/package.json
@@ -25,6 +25,9 @@
     "@types/node": "^9.4.4",
     "jest": "^22.2.2",
     "mobx": "^3.5.1",
+    "rollup": "^0.56.2",
+    "rollup-plugin-typescript2": "^0.11.1",
+    "rollup-plugin-uglify": "^3.0.0",
     "ts-jest": "^22.0.3",
     "tslint": "^5.9.1",
     "typescript": "^2.7.1"
@@ -37,7 +40,7 @@
     "watch": "jest --watch --coverage",
     "lint": "tslint --project .",
     "prepublish": "npm run build",
-    "build": "tsc --project tsconfig.build.json"
+    "build": "rollup -c"
   },
   "jest": {
     "coveragePathIgnorePatterns": [
