--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -22,6 +22,9 @@
     "jest": "^22.2.2",
     "mobx": "^3.5.1",
     "mobx-collection-store": "^2.0.0",
+    "rollup": "^0.56.2",
+    "rollup-plugin-typescript2": "^0.11.1",
+    "rollup-plugin-uglify": "^3.0.0",
     "ts-jest": "^22.0.3",
     "tslint": "^5.9.1",
     "typescript": "^2.7.1"
@@ -36,7 +39,7 @@
     "benchmark-watch": "jest benchmark --watch",
     "lint": "tslint --project .",
     "prepublish": "npm run build",
-    "build": "tsc --project tsconfig.build.json"
+    "build": "rollup -c"
   },
   "jest": {
     "coveragePathIgnorePatterns": [
