--- a/packages/datx/tsconfig.build.json
+++ b/packages/datx/tsconfig.build.json
@@ -14,7 +14,7 @@
       "es2016",
       "es2017"
     ],
-    "module": "commonjs",
+    "module": "esnext",
     "noImplicitAny": false,
     "noImplicitReturns": true,
     "noUnusedParameters": true,
