--- a/packages/datx-utils/package.json
+++ b/packages/datx-utils/package.json
@@ -24,12 +24,16 @@
     "@types/jest": "^22.2.0",
     "@types/node": "^9.4.7",
     "jest": "^22.4.2",
+    "mobx": "^4.1.0",
     "rollup": "^0.57.1",
     "rollup-plugin-typescript2": "^0.12.0",
     "rollup-plugin-uglify": "^3.0.0",
     "ts-jest": "^22.4.1",
     "tslint": "^5.9.1",
     "typescript": "^2.7.2"
+  },
+  "peerDependencies": {
+    "mobx": "^4.1.0"
   },
   "scripts": {
     "test": "jest --coverage",
