--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -2,7 +2,8 @@
   "name": "datx-jsonapi",
   "version": "0.9.12",
   "description": "DatX mixin for JSON API support",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
   "sideEffects": false,
   "repository": {
