--- a/packages/datx-utils/package.json
+++ b/packages/datx-utils/package.json
@@ -2,7 +2,8 @@
   "name": "datx-utils",
   "version": "0.9.10",
   "description": "DatX lib utils for mixins",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
   "sideEffects": false,
   "repository": {
