--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -2,7 +2,8 @@
   "name": "datx",
   "version": "0.9.12",
   "description": "A MobX data store",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
   "sideEffects": false,
   "repository": {
