--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -17,17 +17,17 @@
   "author": "Infinum JavaScript Team <hello@infinum.co>",
   "license": "MIT",
   "devDependencies": {
-    "@infinumjs/tslint-config": "^1.1.1",
-    "@types/jest": "^22.2.2",
-    "@types/node": "^9.6.1",
+    "@infinumjs/tslint-config": "^2.0.0-beta.3",
+    "@types/jest": "^22.2.3",
+    "@types/node": "^10.0.0",
     "jest": "^22.4.3",
-    "mobx": "^4.1.1",
-    "rollup": "^0.57.1",
-    "rollup-plugin-typescript2": "^0.12.0",
+    "mobx": "^4.2.0",
+    "rollup": "^0.58.2",
+    "rollup-plugin-typescript2": "^0.13.0",
     "rollup-plugin-uglify": "^3.0.0",
-    "ts-jest": "^22.4.2",
+    "ts-jest": "^22.4.4",
     "tslint": "^5.9.1",
-    "typescript": "^2.8.1"
+    "typescript": "^2.8.3"
   },
   "peerDependencies": {
     "mobx": "^4.1.0"
