--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^10.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^22.4.3",
+    "lodash": "^4.17.10",
     "mobx": "^4.2.0",
     "nock": "^9.2.5",
     "rollup": "^0.58.2",
