--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -24,6 +24,8 @@
   "devDependencies": {
     "@infinumjs/tslint-config": "^2.0.0-beta.3",
     "@types/jest": "^22.2.3",
+    "@types/lodash": "^4.14.108",
+    "@types/nock": "^9.1.3",
     "@types/node": "^10.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^22.4.3",
