Fail test on TS error

--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -54,6 +54,11 @@
     "testRegex": "test/(.*).ts",
     "transform": {
       ".ts": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "enableTsDiagnostics": true
+      }
     }
   },
   "dependencies": {
