--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -63,6 +63,11 @@
     "testRegex": "test/main.ts",
     "transform": {
       ".ts": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "enableTsDiagnostics": true
+      }
     }
   },
   "dependencies": {
