--- a/packages/datx-utils/package.json
+++ b/packages/datx-utils/package.json
@@ -55,6 +55,11 @@
     "testRegex": "test/(.*).ts",
     "transform": {
       ".ts": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "enableTsDiagnostics": true
+      }
     }
   }
 }
