--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,13 @@ node_js:
   - "8"
   - "9"
   - "10"
+env:
+  - MOBX_VERSION=4
+  - MOBX_VERSION=5
 install:
   - npm install -g lerna
   - yarn
   - lerna bootstrap
+  - lerna add mobx@${MOBX_VERSION}
   - lerna run build
 script: lerna run test
