--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -30,7 +30,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jest": "^22.4.3",
     "lodash": "^4.17.10",
-    "mobx": "^5.0.0",
+    "mobx": "^4.2.0",
     "nock": "^9.2.5",
     "rollup": "^0.60.0",
     "rollup-plugin-typescript2": "^0.14.0",
@@ -40,7 +40,7 @@
     "typescript": "^2.8.3"
   },
   "peerDependencies": {
-    "mobx": "^5.0.0"
+    "mobx": "^4.2.0|^5.0.0"
   },
   "scripts": {
     "test": "jest --coverage",
