--- a/packages/datx-utils/package.json
+++ b/packages/datx-utils/package.json
@@ -25,7 +25,7 @@
     "@types/jest": "^23.0.0",
     "@types/node": "^10.0.0",
     "jest": "^22.4.3",
-    "mobx": "^5.0.0",
+    "mobx": "^4.2.0",
     "rollup": "^0.60.0",
     "rollup-plugin-typescript2": "^0.14.0",
     "rollup-plugin-uglify": "^3.0.0",
@@ -34,7 +34,7 @@
     "typescript": "^2.8.3"
   },
   "peerDependencies": {
-    "mobx": "^5.0.0"
+    "mobx": "^4.2.0|^5.0.0"
   },
   "scripts": {
     "test": "jest --coverage",
