--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -30,7 +30,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jest": "^23.6.0",
     "lodash": "^4.17.11",
-    "mobx": "^4.2.0",
+    "mobx": "^5.1.2",
     "rollup": "^0.66.2",
     "nock": "^10.0.0",
     "rollup-plugin-typescript2": "^0.17.0",
@@ -40,7 +40,7 @@
     "typescript": "^3.0.3"
   },
   "peerDependencies": {
-    "mobx": "^4.2.0|^5.0.0"
+    "mobx": "^4.2.0 || ^5.1.2"
   },
   "scripts": {
     "test": "jest --coverage",
