--- a/packages/datx/tsconfig.build.json
+++ b/packages/datx/tsconfig.build.json
@@ -21,7 +21,8 @@
     "outDir": "./dist",
     "strict": true,
     "strictFunctionTypes": false,
-    "target": "es5"
+    "target": "es5",
+    "esModuleInterop": true
   },
   "exclude": [
     "node_modules",
