--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -66,7 +66,9 @@
     },
     "globals": {
       "ts-jest": {
-        "enableTsDiagnostics": true
+        "diagnostics": {
+          "warnOnly": true
+        }
       }
     }
   },
