Add support for patches - #8

--- a/packages/datx-utils/package.json
+++ b/packages/datx-utils/package.json
@@ -52,7 +52,7 @@
       "ts",
       "js"
     ],
-    "testRegex": "test/(.*).ts",
+    "testRegex": "test/(.*).ts$",
     "globals": {
       "ts-jest": {
         "diagnostics": {
