--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -50,7 +50,7 @@
       "ts",
       "js"
     ],
-    "testRegex": "test/(.*).ts",
+    "testRegex": "test/(.*).ts$",
     "globals": {
       "ts-jest": {
         "diagnostics": {
