--- a/packages/datx-jsonapi/tsconfig.build.json
+++ b/packages/datx-jsonapi/tsconfig.build.json
@@ -12,7 +12,8 @@
     "lib": [
       "es2015",
       "es2016",
-      "es2017"
+      "es2017",
+      "dom"
     ],
     "module": "esnext",
     "noImplicitAny": false,
