--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.15.1",
+  "version": "0.15.2-0.16.0-0.0",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
