--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datx",
-  "version": "0.15.2-0.16.0-0.0",
+  "version": "0.16.0-0",
   "description": "A MobX data store",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -62,6 +62,6 @@
     "testMatch": null
   },
   "dependencies": {
-    "datx-utils": "^0.15.2-0.16.0-0.0"
+    "datx-utils": "^0.16.0-0"
   }
 }
