--- a/packages/datx/tsconfig.json
+++ b/packages/datx/tsconfig.json
@@ -5,6 +5,7 @@
     "test/**/*"
   ],
   "compilerOptions": {
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "noUnusedLocals": true
   }
 }
