--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -25,22 +25,22 @@
     "@infinumjs/tslint-config": "^2.0.0-beta.6",
     "@types/jest": "^23.3.13",
     "@types/lodash": "^4.14.120",
-    "@types/nock": "^9.3.0",
+    "@types/nock": "^9.3.1",
     "@types/node": "^10.12.18",
     "isomorphic-fetch": "^2.2.1",
-    "jest": "^23.6.0",
+    "jest": "^24.0.0",
     "lodash": "^4.17.11",
     "mobx": "^5.9.0",
     "nock": "^10.0.6",
     "rollup": "^1.1.0",
     "rollup-plugin-typescript2": "^0.19.2",
-    "rollup-plugin-uglify": "^6.0.1",
+    "rollup-plugin-uglify": "^6.0.2",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "typescript": "^3.2.4"
   },
   "peerDependencies": {
-    "mobx": "^5.9.0"
+    "mobx": "^4.2.0 || ^5.5.0"
   },
   "scripts": {
     "test": "jest --coverage",
