--- a/packages/datx-utils/package.json
+++ b/packages/datx-utils/package.json
@@ -24,17 +24,17 @@
     "@infinumjs/tslint-config": "^2.0.0-beta.6",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
-    "jest": "^23.6.0",
+    "jest": "^24.0.0",
     "mobx": "^5.9.0",
-    "rollup": "^1.1.0",
+    "rollup": "^1.1.2",
     "rollup-plugin-typescript2": "^0.19.2",
-    "rollup-plugin-uglify": "^6.0.1",
+    "rollup-plugin-uglify": "^6.0.2",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "typescript": "^3.2.4"
   },
   "peerDependencies": {
-    "mobx": "^5.9.0"
+    "mobx": "^4.2.0 || ^5.5.0"
   },
   "scripts": {
     "test": "jest --coverage",
