--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -34,7 +34,6 @@
     "nock": "^10.0.6",
     "rollup": "^1.10.0",
     "rollup-plugin-typescript2": "^0.24.0",
-    "rollup-plugin-uglify": "^6.0.2",
     "ts-jest": "^24.0.2",
     "tslint": "^5.15.0",
     "typescript": "^3.4.3"
@@ -74,6 +73,7 @@
   },
   "dependencies": {
     "datx": "^1.0.1",
-    "datx-utils": "^1.0.0"
+    "datx-utils": "^1.0.0",
+    "rollup-plugin-terser": "^5.1.2"
   }
 }
