--- a/packages/datx-utils/package.json
+++ b/packages/datx-utils/package.json
@@ -28,7 +28,6 @@
     "mobx": "^5.9.4",
     "rollup": "^1.10.0",
     "rollup-plugin-typescript2": "^0.24.0",
-    "rollup-plugin-uglify": "^6.0.2",
     "ts-jest": "^24.0.2",
     "tslint": "^5.15.0",
     "typescript": "^3.4.3"
@@ -62,5 +61,8 @@
     },
     "preset": "ts-jest",
     "testMatch": null
+  },
+  "dependencies": {
+    "rollup-plugin-terser": "^5.1.2"
   }
 }
