--- a/packages/datx-utils/tsconfig.build.json
+++ b/packages/datx-utils/tsconfig.build.json
@@ -1,33 +1,18 @@
 {
   "compilerOptions": {
     "allowJs": false,
-    "allowUnreachableCode": false,
-    "allowUnusedLabels": false,
     "alwaysStrict": true,
     "declaration": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
     "inlineSources": true,
-    "lib": [
-      "es2015",
-      "es2016",
-      "es2017"
-    ],
+    "lib": ["es2015", "es2016", "es2017"],
     "module": "esnext",
-    "noImplicitAny": false,
-    "noImplicitReturns": true,
-    "noUnusedParameters": true,
     "outDir": "./dist",
     "strict": true,
-    "strictFunctionTypes": false,
     "target": "es5"
   },
-  "exclude": [
-    "node_modules",
-    "examples"
-  ],
-  "include": [
-    "src/**/*"
-  ]
+  "exclude": ["node_modules", "examples"],
+  "include": ["src/**/*"]
 }
