--- a/packages/datx/tsconfig.build.json
+++ b/packages/datx/tsconfig.build.json
@@ -9,11 +9,7 @@
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
     "inlineSources": true,
-    "lib": [
-      "es2015",
-      "es2016",
-      "es2017"
-    ],
+    "lib": ["es2015", "es2016", "es2017"],
     "module": "esnext",
     "noImplicitAny": false,
     "noImplicitReturns": true,
@@ -24,11 +20,6 @@
     "target": "es5",
     "esModuleInterop": true
   },
-  "exclude": [
-    "node_modules",
-    "examples"
-  ],
-  "include": [
-    "src/**/*"
-  ]
+  "exclude": ["node_modules", "examples"],
+  "include": ["src/**/*"]
 }
