--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -17,14 +17,16 @@
   "author": "Infinum JavaScript Team <hello@infinum.co>",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^24.0.24",
-    "@types/node": "^13.1.0",
+    "@rollup/plugin-commonjs": "^11.0.1",
+    "@types/jest": "^24.0.25",
+    "@types/node": "^13.1.6",
     "eslint": "^6.8.0",
     "jest": "^24.9.0",
     "mobx": "^5.15.1",
-    "rollup": "^1.27.14",
+    "rollup": "^1.29.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-typescript2": "^0.25.3",
-    "ts-jest": "^24.2.0",
+    "ts-jest": "^24.3.0",
     "typescript": "^3.7.4"
   },
   "peerDependencies": {
