Fix build process

--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -34,6 +34,7 @@
     "mobx": "^5.15.1",
     "nock": "^11.7.2",
     "rollup": "^1.29.0",
+    "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.5",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.2.0",
     "rollup-plugin-typescript2": "^0.25.3",
