--- a/packages/datx-utils/package.json
+++ b/packages/datx-utils/package.json
@@ -28,6 +28,7 @@
     "jest": "^24.9.0",
     "mobx": "^5.15.1",
     "rollup": "^1.29.0",
+    "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.5",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.2.0",
     "rollup-plugin-typescript2": "^0.25.3",
