--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datx-jsonapi",
-  "version": "1.0.1",
+  "version": "2.0.0-beta.0",
   "description": "DatX mixin for JSON API support",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -71,7 +71,7 @@
     "testMatch": null
   },
   "dependencies": {
-    "datx": "^2.0.0",
-    "datx-utils": "^2.0.0"
+    "datx": "^2.0.0-beta.0",
+    "datx-utils": "^2.0.0-beta.0"
   }
 }
