--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datx",
-  "version": "2.0.0",
+  "version": "2.0.0-beta.0",
   "description": "A MobX data store",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -59,6 +59,6 @@
     "testMatch": null
   },
   "dependencies": {
-    "datx-utils": "^2.0.0"
+    "datx-utils": "^2.0.0-beta.0"
   }
 }
