--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,13 @@ install:
   - lerna run build
 script:
   - lerna run test
-  - git config --global user.name "${GH_NAME}"
-  - git config --global user.email "${GH_EMAIL}"
-  - echo "machine github.com login ${GH_NAME} password ${GH_TOKEN}" > ~/.netrc
-  - cd website && yarn install && GIT_USER="${GH_NAME}" yarn run publish-gh-pages
+  
+deploy:
+  provider: script
+  script: >
+    git config --global user.name "${GH_NAME}";
+    git config --global user.email "${GH_EMAIL}";
+    echo "machine github.com login ${GH_NAME} password ${GH_TOKEN}" > ~/.netrc;
+    cd website && yarn install && GIT_USER="${GH_NAME}" yarn run publish-gh-pages;
+  on:
+    branch: master
