--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
   "extends": "@infinumjs",
   "rules": {
     "@typescript-eslint/ban-ts-ignore": 0,
-    "@typescript-eslint/no-explicit-any": 0
+    "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/no-unused-vars": [2, { "argsIgnorePattern": "^_" }]
   }
 }
