--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -18,13 +18,13 @@
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.0",
     "jest": "^25.2.7",
     "mobx": "^5.15.4",
     "rollup": "^2.3.3",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.8",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-typescript2": "^0.27.0",
     "ts-jest": "^25.3.1",
     "typescript": "^3.8.3"
