--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -23,6 +23,7 @@
   ],
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.149",
     "@types/nock": "^11.1.0",
@@ -34,7 +35,6 @@
     "mobx": "^5.15.4",
     "rollup": "^2.3.3",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.8",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.3.0",
     "rollup-plugin-typescript2": "^0.27.0",
     "ts-jest": "^25.3.1",
