--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: Docs
 
 on:
   push:
-    branches: [ master, feature/github-action ]
+    branches: [ master, feature/github-actions ]
 
 jobs:
   docs:
