--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,10 +18,8 @@ jobs:
           git config --global user.email "${{ secrets.DOCS_USER_EMAIL }}"
           echo "machine github.com login ${{ secrets.DOCS_USER_NAME }} password ${{ secrets.ACCESS_TOKEN }}" > ~/.netrc
         
-      - name: Prepare dependencies
+      - name: Run & deploy
         run: |
           cd website
           yarn install
-        
-      - name: Run & deploy
-        run: GIT_USER="${{ secrets.DOCS_USER_NAME }}" yarn run publish-gh-pages
+          GIT_USER="${{ secrets.DOCS_USER_NAME }}" yarn run publish-gh-pages
