--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: Docs
 
 on:
   push:
-    branches: [ master ]
+    branches: [master, release/*]
 
 jobs:
   docs:
@@ -11,13 +11,13 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 1
-        
+
       - name: Setup git
         run: |
           git config --global user.name "${{ secrets.DOCS_USER_NAME }}"
           git config --global user.email "${{ secrets.DOCS_USER_EMAIL }}"
           echo "machine github.com login ${{ secrets.DOCS_USER_NAME }} password ${{ secrets.ACCESS_TOKEN }}" > ~/.netrc
-        
+
       - name: Run & deploy
         run: |
           cd website
