--- a/packages/datx-network/package.json
+++ b/packages/datx-network/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "datx-utils",
+  "name": "datx-network",
   "version": "2.0.0-beta.4",
-  "description": "DatX lib utils for mixins",
+  "description": "DatX network layer",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
@@ -52,7 +52,7 @@
       "ts",
       "js"
     ],
-    "testRegex": "test/(.*).ts$",
+    "testRegex": "test/(.*).test.ts$",
     "globals": {
       "ts-jest": {
         "diagnostics": {
