Fix existing test

--- a/packages/datx-network/package.json
+++ b/packages/datx-network/package.json
@@ -64,7 +64,10 @@
       }
     },
     "preset": "ts-jest",
-    "testMatch": null
+    "testMatch": null,
+    "setupFiles": [
+      "./test/setup.ts"
+    ]
   },
   "dependencies": {
     "datx": "^2.0.0-beta.4"
