Add multiple tests, bugfixes

--- a/packages/datx-network/package.json
+++ b/packages/datx-network/package.json
@@ -65,7 +65,7 @@
     },
     "preset": "ts-jest",
     "testMatch": null,
-    "setupFiles": [
+    "setupFilesAfterEnv": [
       "./test/setup.ts"
     ]
   },
