Fix can`t  use id or ids  for indirect references
Because the `hasBackRef` method does not discuss the case where `item[property]` is `ID` or `Array<ID>`

--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -48,6 +48,7 @@
       "js"
     ],
     "testRegex": "test/(.*).ts$",
+    "testPathIgnorePatterns": ["test/__models__/*"],
     "globals": {
       "ts-jest": {
         "diagnostics": {
