--- a/packages/datx-jsonapi/tsconfig.build.json
+++ b/packages/datx-jsonapi/tsconfig.build.json
@@ -17,7 +17,8 @@
     "outDir": "./dist",
     "strict": true,
     "strictFunctionTypes": false,
-    "target": "es5"
+    "target": "es5",
+    "resolveJsonModule": true
   },
   "exclude": ["node_modules", "examples"],
   "include": ["src/**/*"]
