--- a/packages/datx-jsonapi/tsconfig.json
+++ b/packages/datx-jsonapi/tsconfig.json
@@ -1,11 +1,9 @@
 {
   "extends": "./tsconfig.build.json",
-  "include": [
-    "src/**/*",
-    "test/**/*"
-  ],
+  "include": ["src/**/*", "test/**/*"],
   "compilerOptions": {
     "moduleResolution": "node",
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "resolveJsonModule": true
   }
 }
