--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -22,7 +22,7 @@
     "@types/jest": "^26.0.3",
     "@types/node": "^14.0.14",
     "jest": "^26.1.0",
-    "mobx": "^5.15.4",
+    "mobx": "^6.0.0",
     "rollup": "^2.18.1",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.10",
     "rollup-plugin-typescript2": "^0.27.1",
@@ -30,7 +30,7 @@
     "typescript": "^3.9.5"
   },
   "peerDependencies": {
-    "mobx": "^4.2.0 || ^5.5.0"
+    "mobx": "^4.2.0 || ^5.5.0 || ^6.0.0"
   },
   "scripts": {
     "test": "jest --coverage",
