--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,31 +2,30 @@ name: Unit tests
 
 on:
   push:
-    branches: [ master, feature/*, release/* ]
+    branches: [master, feature/*, release/*]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [10.x, 12.x, 14.x]
-        mobx-version: [4, 5]
+        mobx-version: [4, 5, 6]
 
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm install -g lerna
-    - run: yarn
-    - run: lerna bootstrap
-    - run: lerna add mobx@${{ matrix.mobx-version }} --dev
-    - run: lerna run build
-    - run: lerna run test
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm install -g lerna
+      - run: yarn
+      - run: lerna bootstrap
+      - run: lerna add mobx@${{ matrix.mobx-version }} --dev
+      - run: lerna run build
+      - run: lerna run test
