--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -31,7 +31,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jest": "^26.1.0",
     "lodash": "^4.17.15",
-    "mobx": "^5.15.4",
+    "mobx": "^6.0.0",
     "rollup": "^2.18.1",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.10",
     "rollup-plugin-terser": "^6.1.0",
@@ -41,7 +41,7 @@
     "uuid": "^8.2.0"
   },
   "peerDependencies": {
-    "mobx": "^4.2.0 || ^5.5.0"
+    "mobx": "^4.2.0 || ^5.5.0 || ^6.0.0"
   },
   "scripts": {
     "test": "jest --coverage",
