--- a/packages/datx-network/package.json
+++ b/packages/datx-network/package.json
@@ -27,7 +27,7 @@
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.44",
     "jest": "^26.1.0",
-    "mobx": "^5.15.4",
+    "mobx": "^6.0.0",
     "react": "^16.13.1",
     "rollup": "^2.18.1",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.10",
@@ -37,7 +37,7 @@
     "typescript": "^3.9.5"
   },
   "peerDependencies": {
-    "mobx": "^4.2.0 || ^5.5.0",
+    "mobx": "^4.2.0 || ^5.5.0 || ^6.0.0",
     "react": "^16.8.0"
   },
   "scripts": {
