--- a/packages/datx-network/package.json
+++ b/packages/datx-network/package.json
@@ -28,7 +28,6 @@
     "@types/react": "^16.9.50",
     "jest": "^26.4.2",
     "mobx": "^6.0.0",
-    "react": "^16.13.1",
     "rollup": "^2.28.2",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.13",
     "rollup-plugin-terser": "^7.0.2",
@@ -37,8 +36,7 @@
     "typescript": "^4.0.3"
   },
   "peerDependencies": {
-    "mobx": "^4.2.0 || ^5.5.0 || ^6.0.0",
-    "react": "^16.8.0"
+    "mobx": "^4.2.0 || ^5.5.0 || ^6.0.0"
   },
   "scripts": {
     "test": "jest --coverage",
