--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -43,7 +43,7 @@
       "ts",
       "js"
     ],
-    "testRegex": "test/(.*).ts$",
+    "testRegex": "test/(.*).test.ts$",
     "globals": {
       "ts-jest": {
         "diagnostics": {
@@ -52,7 +52,10 @@
       }
     },
     "preset": "ts-jest",
-    "testMatch": null
+    "testMatch": null,
+    "setupFilesAfterEnv": [
+      "./test/setup.ts"
+    ]
   },
   "dependencies": {
     "datx-utils": "^2.0.0-beta.7"
