--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -31,7 +31,6 @@
     "isomorphic-fetch": "^3.0.0",
     "jest": "^26.4.2",
     "lodash": "^4.17.20",
-    "mobx": "^6.0.0",
     "rollup": "^2.28.2",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.13",
     "rollup-plugin-terser": "^7.0.2",
@@ -40,9 +39,7 @@
     "typescript": "^4.0.3",
     "uuid": "^8.3.0"
   },
-  "peerDependencies": {
-    "mobx": "^4.2.0 || ^5.5.0 || ^6.0.0"
-  },
+  "peerDependencies": {},
   "scripts": {
     "test": "jest --coverage",
     "watch": "jest --watch --coverage",
@@ -74,7 +71,7 @@
   },
   "dependencies": {
     "datx": "^2.0.0-beta.7",
-    "datx-utils": "^2.0.0-beta.7",
-    "datx-network": "^2.0.0-beta.9"
+    "datx-network": "^2.0.0-beta.9",
+    "datx-utils": "^2.0.0-beta.7"
   }
 }
