--- a/.eslintrc
+++ b/.eslintrc
@@ -5,11 +5,11 @@
     "node": true,
     "jest": true
   },
-  "extends": "@infinumjs",
+  "extends": "@infinumjs/eslint-config-core-ts",
   "rules": {
-    "@typescript-eslint/ban-ts-ignore": 0,
-    "@typescript-eslint/no-explicit-any": 0,
-    "@typescript-eslint/no-unused-vars": [2, { "argsIgnorePattern": "^_" }],
-    "no-console": "error"
+    "@typescript-eslint/ban-ts-comment": 1,
+    "@typescript-eslint/ban-types": 1,
+    "@typescript-eslint/interface-name-prefix": 0,
+    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
   }
 }
