Fix lint workflow branches

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,7 +2,9 @@ name: Lint
 
 on:
   push:
-    branches: [master, release/*]
+    branches: [master, feature/*, release/*]
+  pull_request:
+    branches: [master]
 
 jobs:
   docs:
