Some initial changes

--- a/packages/datx-react/package.json
+++ b/packages/datx-react/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@datx/network",
+  "name": "@datx/react",
   "version": "3.0.0-beta.1",
-  "description": "DatX network layer",
+  "description": "DatX mixin for better React integration",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
@@ -16,20 +16,17 @@
   "homepage": "https://github.com/infinum/datx#readme",
   "author": "Infinum JavaScript Team <hello@infinum.com>",
   "license": "MIT",
-  "keywords": [
-    "datx",
-    "mobx"
-  ],
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.27",
     "jest": "^26.6.3",
+    "react": "^17.0.1",
     "rollup": "^2.38.5",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.17",
-    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.29.0",
+    "swr": "^0.4.2",
     "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
   },
@@ -64,6 +61,11 @@
   },
   "dependencies": {
     "@datx/core": "3.0.0-beta.1",
+    "@datx/network": "3.0.0-beta.1",
     "@datx/utils": "3.0.0-beta.1"
+  },
+  "peerDependencies": {
+    "react": "^16.0.0 || ^17.0.1",
+    "swr": "^0.4.2"
   }
 }
