--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/jsonapi",
-  "version": "2.0.0",
+  "version": "3.0.0-beta.1",
   "description": "DatX mixin for JSON API support",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -22,21 +22,21 @@
     "jsonapi"
   ],
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.1.0",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.1.1",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.22",
+    "@types/node": "^14.14.27",
     "@types/uuid": "^8.3.0",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^26.6.3",
     "lodash": "^4.17.20",
-    "rollup": "^2.38.0",
+    "rollup": "^2.38.5",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.17",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.29.0",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3",
+    "ts-jest": "^26.5.1",
+    "typescript": "^4.1.5",
     "uuid": "^8.3.2"
   },
   "scripts": {
@@ -69,8 +69,8 @@
     ]
   },
   "dependencies": {
-    "@datx/core": "^2.0.0",
-    "@datx/network": "^2.0.0",
-    "@datx/utils": "^2.0.0"
+    "@datx/core": "3.0.0-beta.1",
+    "@datx/network": "3.0.0-beta.1",
+    "@datx/utils": "3.0.0-beta.1"
   }
 }
