--- a/packages/datx-utils/package.json
+++ b/packages/datx-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/utils",
-  "version": "2.0.0",
+  "version": "3.0.0-beta.1",
   "description": "DatX lib utils for mixins",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -21,18 +21,18 @@
     "mobx"
   ],
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.1.0",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.1.1",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.22",
+    "@types/node": "^14.14.27",
     "jest": "^26.6.3",
-    "mobx": "^6.0.4",
-    "rollup": "^2.38.0",
+    "mobx": "^6.1.6",
+    "rollup": "^2.38.5",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.17",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.29.0",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "ts-jest": "^26.5.1",
+    "typescript": "^4.1.5"
   },
   "scripts": {
     "test": "jest --coverage",
