Add website to dependencies check, increase PR count

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,15 @@ updates:
       interval: "daily"
     labels:
       - "maintenance"
+    assignees:
+      - "DarkoKukovec"
+    open-pull-requests-limit: 10
+  - package-ecosystem: "npm"
+    directory: "/website"
+    schedule:
+      interval: "daily"
+    labels:
+      - "maintenance"
+    assignees:
+      - "DarkoKukovec"
+    open-pull-requests-limit: 10
