Add docs label for dependabot website

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,6 +15,7 @@ updates:
       interval: "daily"
     labels:
       - "maintenance"
+      - "documentation"
     assignees:
       - "DarkoKukovec"
     open-pull-requests-limit: 10
