Reenable website dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,13 +9,13 @@ updates:
     assignees:
       - "DarkoKukovec"
     open-pull-requests-limit: 10
-#   - package-ecosystem: "npm"
-#     directory: "/website"
-#     schedule:
-#       interval: "daily"
-#     labels:
-#       - "maintenance"
-#       - "documentation"
-#     assignees:
-#       - "DarkoKukovec"
-#     open-pull-requests-limit: 10
+  - package-ecosystem: "npm"
+    directory: "/website"
+    schedule:
+      interval: "daily"
+    labels:
+      - "maintenance"
+      - "documentation"
+    assignees:
+      - "DarkoKukovec"
+    open-pull-requests-limit: 10
