--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -71,8 +71,8 @@
     ]
   },
   "dependencies": {
-    "@datx/core": "^2.3.0",
-    "@datx/network": "^2.3.0",
-    "@datx/utils": "^2.3.0"
+    "@datx/core": "2.3.0",
+    "@datx/network": "2.3.0",
+    "@datx/utils": "2.3.0"
   }
 }
