--- a/packages/datx-network/package.json
+++ b/packages/datx-network/package.json
@@ -66,7 +66,7 @@
     ]
   },
   "dependencies": {
-    "@datx/core": "^2.3.0",
-    "@datx/utils": "^2.3.0"
+    "@datx/core": "2.3.0",
+    "@datx/utils": "2.3.0"
   }
 }
