Fix the tsconfig paths

--- a/packages/datx-jsonapi-angular/tsconfig.json
+++ b/packages/datx-jsonapi-angular/tsconfig.json
@@ -5,6 +5,6 @@
     "moduleResolution": "node",
     "noUnusedLocals": true,
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "outDir": "./dist"
   }
 }
