--- a/packages/datx-jsonapi/tsconfig.json
+++ b/packages/datx-jsonapi/tsconfig.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "noUnusedLocals": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "outDir": "./dist"
   }
 }
