--- a/packages/datx-utils/tsconfig.json
+++ b/packages/datx-utils/tsconfig.json
@@ -3,6 +3,7 @@
   "include": ["src/**/*", "test/**/*"],
   "compilerOptions": {
     "moduleResolution": "node",
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "outDir": "./dist"
   }
 }
