--- a/packages/datx-network/tsconfig.build.json
+++ b/packages/datx-network/tsconfig.build.json
@@ -14,10 +14,11 @@
     "noImplicitAny": false,
     "noImplicitReturns": true,
     "noUnusedParameters": true,
-    "outDir": "./dist",
+    "outDir": ".",
     "strict": true,
     "strictFunctionTypes": false,
-    "target": "es5"
+    "target": "es5",
+    "esModuleInterop": true
   },
   "exclude": ["node_modules", "examples"],
   "include": ["src/**/*"]
