--- a/packages/datx-network/tsconfig.json
+++ b/packages/datx-network/tsconfig.json
@@ -4,6 +4,6 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "noUnusedLocals": true,
-    "esModuleInterop": true
+    "outDir": "./dist"
   }
 }
