--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -23,6 +23,8 @@
     "angular"
   ],
   "devDependencies": {
+    "@angular/common": "^13.0.0",
+    "@angular/core": "^13.0.0",
     "@rollup/plugin-commonjs": "^21.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-typescript": "^8.2.1",
@@ -36,13 +38,15 @@
     "rollup": "^2.38.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.17",
     "rollup-plugin-terser": "^7.0.2",
-    "rxjs": "^7.0.0",
+    "rxjs": "^6.0.0",
     "ts-jest": "^27.0.3",
     "tslib": "^2.3.0",
     "typescript": "^4.1.3",
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
+    "@angular/common": "*",
+    "@angular/core": "*",
     "rxjs": "^6.0.0"
   },
   "scripts": {
@@ -76,6 +80,7 @@
     ]
   },
   "dependencies": {
+    "@angular/core": "^13.0.0",
     "@datx/core": "2.3.1",
     "@datx/jsonapi": "2.3.1",
     "@datx/utils": "2.3.1"
