fixing tests, WIP

--- a/packages/network-core/package.json
+++ b/packages/network-core/package.json
@@ -49,6 +49,7 @@
       "ts",
       "js"
     ],
+    "testEnvironment": "jsdom",
     "testRegex": "test/(.*).test.ts$",
     "globals": {
       "ts-jest": {
