Add basic CustomFetchService tests

--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -71,7 +71,10 @@
       "js"
     ],
     "testEnvironment": "jsdom",
-    "testRegex": "test/(.*).test.ts$",
+    "testRegex": [
+      "test/(.*).test.ts$",
+      "src/(.*).spec.ts$"
+    ],
     "globals": {
       "ts-jest": {
         "diagnostics": {
