--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -1,5 +1,6 @@
 {
   "name": "nextjs",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,23 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@datx/react": "^0.0.1",
     "next": "12.0.4",
+    "next-api-router": "^1.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "^1.0.1",
-    "@datx/react": "../../packages/react"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "16.11.9",
     "@types/react": "17.0.36",
+    "@types/uuid": "^8.3.3",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
     "typescript": "4.5.2"
-  },
-  "resolutions": {
-    "@datx/core": "../../packages/datx",
-    "@datx/jsonapi": "../../packages/datx-jsonapi",
-    "@datx/network": "../../packages/datx-network",
-    "@datx/utils": "../../packages/datx-utils"
   }
 }
