Add collection service

--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -65,7 +65,8 @@
     "coveragePathIgnorePatterns": [
       "/test/",
       "/node_modules/",
-      "(.*).spec.ts$"
+      "(.*).spec.ts$",
+      "(.*).testing.(.*)$"
     ],
     "moduleFileExtensions": [
       "ts",
