--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -23,6 +23,14 @@
     "angular"
   ],
   "devDependencies": {
+    "@angular-devkit/build-angular": "^12.0.0",
+    "@angular/cli": "^12.0.0",
+    "@angular/common": "^12.0.0",
+    "@angular/compiler": "^12.0.0",
+    "@angular/compiler-cli": "^12.0.0",
+    "@angular/core": "^12.0.0",
+    "@angular/forms": "^12.0.0",
+    "@angular/router": "^12.0.0",
     "@rollup/plugin-commonjs": "^21.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-typescript": "^8.2.1",
@@ -36,32 +44,38 @@
     "rollup": "^2.38.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.17",
     "rollup-plugin-terser": "^7.0.2",
-    "rxjs": "^7.0.0",
+    "rxjs": "^6.0.0",
     "ts-jest": "^27.0.3",
     "tslib": "^2.3.0",
-    "typescript": "^4.1.3",
+    "typescript": "4.2.3",
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
+    "@angular/common": "*",
+    "@angular/core": "*",
     "rxjs": "^6.0.0"
   },
   "scripts": {
-    "test": "jest --coverage",
-    "watch": "jest --watch --coverage",
+    "test": "jest",
+    "watch": "jest --watchAll",
     "prepublish": "npm run build",
     "build": "rollup -c"
   },
   "jest": {
     "coveragePathIgnorePatterns": [
       "/test/",
-      "/node_modules/"
+      "/node_modules/",
+      "(.*).testing.(.*)$"
     ],
     "moduleFileExtensions": [
       "ts",
       "js"
     ],
     "testEnvironment": "jsdom",
-    "testRegex": "test/(.*).test.ts$",
+    "testRegex": [
+      "test/(.*).test.ts$",
+      "src/(.*).spec.ts$"
+    ],
     "globals": {
       "ts-jest": {
         "diagnostics": {
@@ -73,6 +87,10 @@
     "testMatch": null,
     "setupFilesAfterEnv": [
       "./test/setup.ts"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.ts"
     ]
   },
   "dependencies": {
